--- a/src/sim/Makefile.in
+++ b/src/sim/Makefile.in
@@ -588,3 +588,148 @@ util.o: util.cc \
   ../../include/cmessage.h \
   ../../include/carray.h \
   ../../include/cpar.h
+netpack.o: std/netpack.cc \
+  ../../include/omnetpp.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/errmsg.h \
+  ../../include/cobject.h \
+  ../../include/csimul.h \
+  ../../include/macros.h \
+  ../../include/ctypes.h \
+  ../../include/carray.h \
+  ../../include/cqueue.h \
+  ../../include/cllist.h \
+  ../../include/chead.h \
+  ../../include/cwatch.h \
+  ../../include/cpar.h \
+  ../../include/cgate.h \
+  ../../include/cmessage.h \
+  ../../include/cpacket.h \
+  ../../include/cmsgheap.h \
+  ../../include/cstk.h \
+  ../../include/ccor.h \
+  ../../include/cmodule.h \
+  ../../include/cstat.h \
+  ../../include/cdensity.h \
+  ../../include/chist.h \
+  ../../include/cvarhist.h \
+  ../../include/cpsquare.h \
+  ../../include/cksplit.h \
+  ../../include/coutvect.h \
+  ../../include/cdetect.h \
+  ../../include/ctopo.h \
+  ../../include/cnetmod.h \
+  ../../include/cfsm.h \
+  ../../include/protocol.h \
+  ../../include/cenvir.h
+pvmmod.o: pvm/pvmmod.cc \
+  ../../include/cmessage.h \
+  ../../include/cmodule.h \
+  ../../include/csimul.h \
+  ../../include/cstk.h \
+  ../../include/macros.h \
+  ../../include/ctypes.h \
+  ../../include/cenvir.h \
+  ../../include/cpar.h \
+  ../../include/cobject.h \
+  ../../include/carray.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/ccor.h \
+  ../../include/chead.h \
+  ../../include/cqueue.h \
+  ../../include/cgate.h \
+  ../../include/errmsg.h \
+  ../../include/cmsgheap.h \
+  ../../include/coutvect.h
+pvmpack.o: pvm/pvmpack.cc \
+  ../../include/omnetpp.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/errmsg.h \
+  ../../include/cobject.h \
+  ../../include/csimul.h \
+  ../../include/macros.h \
+  ../../include/ctypes.h \
+  ../../include/carray.h \
+  ../../include/cqueue.h \
+  ../../include/cllist.h \
+  ../../include/chead.h \
+  ../../include/cwatch.h \
+  ../../include/cpar.h \
+  ../../include/cgate.h \
+  ../../include/cmessage.h \
+  ../../include/cpacket.h \
+  ../../include/cmsgheap.h \
+  ../../include/cstk.h \
+  ../../include/ccor.h \
+  ../../include/cmodule.h \
+  ../../include/cstat.h \
+  ../../include/cdensity.h \
+  ../../include/chist.h \
+  ../../include/cvarhist.h \
+  ../../include/cpsquare.h \
+  ../../include/cksplit.h \
+  ../../include/coutvect.h \
+  ../../include/cdetect.h \
+  ../../include/ctopo.h \
+  ../../include/cnetmod.h \
+  ../../include/cfsm.h \
+  ../../include/protocol.h \
+  ../../include/cenvir.h
+mpimod.o: mpi/mpimod.cc \
+  ../../include/cmessage.h \
+  ../../include/cmodule.h \
+  ../../include/csimul.h \
+  ../../include/cstk.h \
+  ../../include/macros.h \
+  ../../include/ctypes.h \
+  ../../include/cenvir.h \
+  ../../include/cpar.h \
+  ../../include/cobject.h \
+  ../../include/carray.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/ccor.h \
+  ../../include/chead.h \
+  ../../include/cqueue.h \
+  ../../include/cgate.h \
+  ../../include/errmsg.h \
+  ../../include/cmsgheap.h \
+  ../../include/coutvect.h
+mpipack.o: mpi/mpipack.cc \
+  ../../include/omnetpp.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/errmsg.h \
+  ../../include/cobject.h \
+  ../../include/csimul.h \
+  ../../include/macros.h \
+  ../../include/ctypes.h \
+  ../../include/carray.h \
+  ../../include/cqueue.h \
+  ../../include/cllist.h \
+  ../../include/chead.h \
+  ../../include/cwatch.h \
+  ../../include/cpar.h \
+  ../../include/cgate.h \
+  ../../include/cmessage.h \
+  ../../include/cpacket.h \
+  ../../include/cmsgheap.h \
+  ../../include/cstk.h \
+  ../../include/ccor.h \
+  ../../include/cmodule.h \
+  ../../include/cstat.h \
+  ../../include/cdensity.h \
+  ../../include/chist.h \
+  ../../include/cvarhist.h \
+  ../../include/cpsquare.h \
+  ../../include/cksplit.h \
+  ../../include/coutvect.h \
+  ../../include/cdetect.h \
+  ../../include/ctopo.h \
+  ../../include/cnetmod.h \
+  ../../include/cfsm.h \
+  ../../include/protocol.h \
+  ../../include/cenvir.h
