--- a/samples/demo/Makefile.in
+++ b/samples/demo/Makefile.in
@@ -85,8 +85,8 @@ clean:
 	rm -f *.vec *.sca
 
 depend:
-	makedepend -Y $(INCLUDE_PATH) -- *.cc
-	makedepend -Y $(INCLUDE_PATH) -fMakefile.in -- *.cc
+	$(MAKEDEPEND) -Y $(INCLUDE_PATH) -- *.cc
+	$(MAKEDEPEND) -Y $(INCLUDE_PATH) -fMakefile.in -- *.cc
 
 re-makemake:
 	opp_makemake -f  ../dyna ../fddi ../fifo1 ../fifo2 ../hcube ../hist ../nim ../pvmex ../token   #recreate Makefile
