--- a/samples/fifo2/Makefile.in
+++ b/samples/fifo2/Makefile.in
@@ -121,4 +121,7 @@ re-makemake-m:
 	opp_makemake -f -m    #recreate Makefile.in
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-
+fifo2.o: fifo2.cc \
+  fifo2.h
+gen2.o: gen2.cc
+sink2.o: sink2.cc
