--- a/samples/hcube/Makefile.in
+++ b/samples/hcube/Makefile.in
@@ -118,4 +118,7 @@ re-makemake-m:
 	opp_makemake -f -m    #recreate Makefile.in
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-
+gensink.o: gensink.cc \
+  gensink.h
+hc_rte.o: hc_rte.cc \
+  hc_rte.h
