--- a/src/cmdenv/Makefile.in
+++ b/src/cmdenv/Makefile.in
@@ -57,11 +57,32 @@ clean:
 	rm -f *.o libcmdenv$(A_LIB_SUFFIX) libcmdenv$(SO_LIB_SUFFIX)
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-
-cmdenv.o: cmddefs.h ../../include/defs.h cmdenv.h ../../include/ctypes.h ../../include/chead.h
-cmdenv.o: ../../include/cobject.h ../../include/util.h ../../include/csimul.h ../../include/errmsg.h
-cmdenv.o: ../../include/cmsgheap.h ../../include/coutvect.h ../../include/ccor.h
-cmdenv.o: ../envir/omnetapp.h ../../include/carray.h ../../include/cenvir.h ../envir/args.h
-cmdenv.o: ../envir/envdefs.h enumstr.h ../envir/appreg.h ../envir/cinifile.h
-cmdenv.o: ../../include/cmodule.h ../../include/cqueue.h ../../include/cgate.h ../../include/cnetmod.h
-enumstr.o: enumstr.h
+cmdenv.o: cmdenv.cc \
+  cmddefs.h \
+  cmdenv.h \
+  enumstr.h \
+  ../envir/appreg.h \
+  ../envir/cinifile.h \
+  ../../include/cmodule.h \
+  ../../include/cnetmod.h \
+  ../envir/args.h \
+  ../../include/defs.h \
+  ../../include/ctypes.h \
+  ../../include/csimul.h \
+  ../envir/omnetapp.h \
+  ../../include/chead.h \
+  ../../include/cobject.h \
+  ../../include/util.h \
+  ../../include/errmsg.h \
+  ../../include/cmsgheap.h \
+  ../../include/coutvect.h \
+  ../../include/ccor.h \
+  ../../include/carray.h \
+  ../../include/cenvir.h \
+  ../envir/envdefs.h \
+  ../../include/cpar.h \
+  ../../include/cqueue.h \
+  ../../include/cgate.h
+enumstr.o: enumstr.cc \
+  enumstr.h
+heap.o: heap.cc
