--- a/src/envir/Makefile.in
+++ b/src/envir/Makefile.in
@@ -80,30 +80,123 @@ clean:
 	rm -f *.o libenvir$(A_LIB_SUFFIX) libenvir$(SO_LIB_SUFFIX)
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-
-args.o: args.h envdefs.h ../../include/defs.h
-cenvir.o: args.h envdefs.h ../../include/defs.h cinifile.h ../../include/cenvir.h
-cenvir.o: omnetapp.h ../../include/carray.h ../../include/cobject.h ../../include/util.h
-cenvir.o: ../../include/chead.h slaveapp.h appreg.h ../../include/cmodule.h ../../include/ccor.h
-cenvir.o: ../../include/cqueue.h ../../include/cgate.h ../../include/csimul.h ../../include/errmsg.h
-cenvir.o: ../../include/cmsgheap.h ../../include/coutvect.h ../../include/cnetmod.h
-cinifile.o: ../../include/cenvir.h ../../include/defs.h ../../include/util.h cinifile.h envdefs.h
-cinifile.o: patmatch.h
-main.o: ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/csimul.h
-main.o: ../../include/errmsg.h ../../include/chead.h ../../include/cmsgheap.h ../../include/coutvect.h
-main.o: ../../include/ccor.h ../../include/cenvir.h
-omnetapp.o: args.h envdefs.h ../../include/defs.h omnetapp.h ../../include/carray.h
-omnetapp.o: ../../include/cobject.h ../../include/util.h ../../include/chead.h ../../include/cenvir.h
-omnetapp.o: cinifile.h patmatch.h ../../include/ctypes.h ../../include/ccor.h
-omnetapp.o: ../../include/csimul.h ../../include/errmsg.h ../../include/cmsgheap.h
-omnetapp.o: ../../include/coutvect.h ../../include/cpar.h ../../include/cnetmod.h ../../include/cmodule.h
-omnetapp.o: ../../include/cqueue.h ../../include/cgate.h
-patmatch.o: patmatch.h ../../include/defs.h envdefs.h
-seeds.o: omnetapp.h ../../include/carray.h ../../include/cobject.h ../../include/defs.h
-seeds.o: ../../include/util.h ../../include/chead.h ../../include/cenvir.h args.h envdefs.h
-slaveapp.o: slaveapp.h envdefs.h ../../include/defs.h omnetapp.h ../../include/carray.h
-slaveapp.o: ../../include/cobject.h ../../include/util.h ../../include/chead.h ../../include/cenvir.h
-slaveapp.o: args.h cinifile.h ../../include/csimul.h ../../include/errmsg.h
-slaveapp.o: ../../include/cmsgheap.h ../../include/coutvect.h ../../include/ccor.h
-slaveapp.o: ../../include/cnetmod.h ../../include/cmodule.h ../../include/cqueue.h ../../include/cgate.h
-slaveapp.o: appreg.h
+args.o: args.cc \
+  args.h \
+  envdefs.h \
+  ../../include/defs.h
+cenvir.o: cenvir.cc \
+  args.h \
+  cinifile.h \
+  ../../include/cenvir.h \
+  omnetapp.h \
+  appreg.h \
+  ../../include/cmodule.h \
+  ../../include/cnetmod.h \
+  slaveapp.h \
+  speedmtr.h \
+  envdefs.h \
+  ../../include/defs.h \
+  ../../include/cpar.h \
+  ../../include/cobject.h \
+  ../../include/util.h \
+  ../../include/carray.h \
+  ../../include/chead.h \
+  ../../include/ccor.h \
+  ../../include/cqueue.h \
+  ../../include/cgate.h \
+  ../../include/csimul.h \
+  ../../include/errmsg.h \
+  ../../include/cmsgheap.h \
+  ../../include/coutvect.h
+cinifile.o: cinifile.cc \
+  ../../include/cenvir.h \
+  ../../include/util.h \
+  cinifile.h \
+  patmatch.h \
+  ../../include/defs.h \
+  ../../include/cpar.h \
+  ../../include/cobject.h \
+  envdefs.h
+main.o: main.cc \
+  ../../include/cobject.h \
+  ../../include/csimul.h \
+  ../../include/cenvir.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/errmsg.h \
+  ../../include/chead.h \
+  ../../include/cmsgheap.h \
+  ../../include/coutvect.h \
+  ../../include/ccor.h \
+  ../../include/cpar.h
+omnetapp.o: omnetapp.cc \
+  args.h \
+  omnetapp.h \
+  cinifile.h \
+  patmatch.h \
+  ../../include/ctypes.h \
+  ../../include/ccor.h \
+  ../../include/csimul.h \
+  ../../include/cpar.h \
+  ../../include/cnetmod.h \
+  envdefs.h \
+  ../../include/defs.h \
+  ../../include/carray.h \
+  ../../include/chead.h \
+  ../../include/cenvir.h \
+  ../../include/cobject.h \
+  ../../include/util.h \
+  ../../include/errmsg.h \
+  ../../include/cmsgheap.h \
+  ../../include/coutvect.h \
+  ../../include/cmodule.h \
+  ../../include/cqueue.h \
+  ../../include/cgate.h
+patmatch.o: patmatch.cc \
+  patmatch.h \
+  ../../include/defs.h \
+  envdefs.h
+platdep.o: platdep.cc \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/cenvir.h \
+  ../../include/cpar.h \
+  ../../include/cobject.h
+seeds.o: seeds.cc \
+  omnetapp.h \
+  ../../include/carray.h \
+  ../../include/chead.h \
+  ../../include/cenvir.h \
+  args.h \
+  envdefs.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/cpar.h
+slaveapp.o: slaveapp.cc \
+  slaveapp.h \
+  cinifile.h \
+  ../../include/csimul.h \
+  ../../include/cnetmod.h \
+  appreg.h \
+  envdefs.h \
+  omnetapp.h \
+  ../../include/defs.h \
+  ../../include/carray.h \
+  ../../include/chead.h \
+  ../../include/cenvir.h \
+  args.h \
+  ../../include/cobject.h \
+  ../../include/util.h \
+  ../../include/cpar.h \
+  ../../include/errmsg.h \
+  ../../include/cmsgheap.h \
+  ../../include/coutvect.h \
+  ../../include/ccor.h \
+  ../../include/cmodule.h \
+  ../../include/cqueue.h \
+  ../../include/cgate.h
+speedmtr.o: speedmtr.cc \
+  speedmtr.h \
+  ../../include/defs.h \
+  envdefs.h
