--- a/src/nedc/Makefile.in
+++ b/src/nedc/Makefile.in
@@ -65,11 +65,27 @@ clean:
 	rm -f *.o lex.yy.c ebnf.tab.c ebnf.tab.h nedc$(EXE_SUFFIX) *_n.cc
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-
-ebnf.tab.o: ebnf.h ebnfcfg.h jar_func.h
-jar.o: jar_func.h jar_lib.h
-jar_expr.o: jar_func.h jar_lib.h
-jar_lib.o: jar_func.h jar_lib.h
-jar_mem.o: jar_func.h
-jar_mod.o: jar_func.h jar_lib.h
-lex.yy.o: ebnf.h ebnf.tab.h ebnfcfg.h jar_func.h
+ebnf.tab.o: ebnf.tab.c \
+  ebnf.h \
+  ebnfcfg.h \
+  jar_func.h
+jar.o: jar.c \
+  jar_func.h \
+  jar_lib.h
+jar_expr.o: jar_expr.c \
+  jar_func.h \
+  jar_lib.h
+jar_lib.o: jar_lib.c \
+  jar_func.h \
+  jar_lib.h
+jar_mem.o: jar_mem.c \
+  jar_func.h
+jar_mod.o: jar_mod.c \
+  jar_func.h \
+  jar_lib.h
+lex.yy.o: lex.yy.c \
+  unistd.h \
+  ebnf.h \
+  ebnf.tab.h \
+  ebnfcfg.h \
+  jar_func.h
