--- a/src/plove-old/Makefile.in
+++ b/src/plove-old/Makefile.in
@@ -60,10 +60,13 @@ missing-library:
 	@ echo '*** No Tk installation found -- skipping Plove'
 
 depend:
-	$(MAKEDEPEND) -I. -- *.c *.cc
-	$(MAKEDEPEND) -I. -fMakefile.in -- *.c *.cc
+	$(MAKEDEPEND) -I. -- *.cc
+	$(MAKEDEPEND) -I. -fMakefile.in -- *.cc
 
 clean:
 	rm -f tclcode.cc *.o plove$(EXE_SUFFIX) plove
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
+plove.o: plove.cc \
+  tclcode.cc
+tclcode.o: tclcode.cc
