New NEDC compile flag NEDCFLAGS

--- a/configure.in
+++ b/configure.in
@@ -56,6 +56,7 @@ TK_CFLAGS=
 TK_LIBS=
 
 CFLAGS='-g'
+NEDCFLAGS='-Wno-unused'
 #CFLAGS='-g -Wall'
 #CFLAGS='-O3 -DNDEBUG=1'
 
@@ -408,6 +409,7 @@ AC_SUBST(CC)
 AC_SUBST(CXX)
 AC_SUBST(MYPWD)
 AC_SUBST(NEDC)
+AC_SUBST(NEDCFLAGS)
 AC_SUBST(AS)
 AC_SUBST(AR)
 AC_SUBST(RANLIB)
